--- a/Movies.Client/Views/Home/Index.cshtml
+++ b/Movies.Client/Views/Home/Index.cshtml
@@ -6,3 +6,10 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<ul>
+ @foreach (var claim in User.Claims)
+            {
+               <li><span>Claim type::: @claim.Type</span><span> - Claim value::: @claim.Value</span></li>
+            }
+</ul>
